Add basic body and UI elements

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,9 @@
-.header {
+@import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
+body{
+    font-family: 'Silkscreen', cursive;
+}
+
+.header, .mainMenu {
 display: flex;
 padding: 10px;
 flex-direction: column;
@@ -6,16 +11,25 @@ justify-content: center;
 align-items: center;
 }
 
-.mainMenu {
-    padding: 10px;
-    margin: 5px;
+.choices{
     display: flex;
-    flex-direction: column;
+    margin: 2px;
+    padding: 10px;
+    justify-content: center;
+    align-items:center;
 }
 
-.choices{
+#scoreboard{
     display: flex;
     margin: 10px;
     justify-content: center;
-    align-items:center;
+    align-items: center;
+    font-family: 'Silkscreen', cursive;
+}
+
+#rockButton,#scissorsButton,#paperButton,#beginGame{
+    margin:10px;
+    padding: 10px;
+    font-size: 16px;
+    font-family: 'Silkscreen', cursive;
 }
